src/objects/Construction_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Construction_Stages__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Construction Stages</label>
        <referenceTo>Project_Construction_Stages__c</referenceTo>
        <relationshipLabel>Construction Stage</relationshipLabel>
        <relationshipName>Construction_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tower_Name__c</fullName>
        <label>Tower Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Construction Stage</label>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Construction Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Stage</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>